--- a/5.0/runtime/Dockerfile.fedora
+++ b/5.0/runtime/Dockerfile.fedora
@@ -47,11 +47,14 @@ COPY ./root/usr/bin /usr/bin
 COPY ./s2i/bin/ /usr/libexec/s2i
 
 # TODO: remove Microsoft binaries
-RUN curl https://download.visualstudio.microsoft.com/download/pr/473651e3-55d5-4e7c-b255-2cbe11358eea/6b6f33d86ee00720b36a7c34200f4d0c/dotnet-sdk-5.0.100-preview.4.20258.7-linux-x64.tar.gz -o /tmp/dotnet-sdk.tar.gz && \
-    mkdir ~/dotnet-preview && \
-    tar xf /tmp/dotnet-sdk.tar.gz -C ~/dotnet-preview
+#RUN curl https://download.visualstudio.microsoft.com/download/pr/473651e3-55d5-4e7c-b255-2cbe11358eea/6b6f33d86ee00720b36a7c34200f4d0c/dotnet-sdk-5.0.100-preview.4.20258.7-linux-x64.tar.gz -o /tmp/dotnet-sdk.tar.gz && \
+    #mkdir ~/dotnet-preview && \
+    #tar xf /tmp/dotnet-sdk.tar.gz -C ~/dotnet-preview
 
-RUN INSTALL_PKGS="aspnetcore-runtime-3.1 nss_wrapper tar unzip findutils" && \
+#RUN INSTALL_PKGS="aspnetcore-runtime-3.1 nss_wrapper tar unzip findutils" && \
+RUN INSTALL_PKGS="dotnet-sdk-5.0 nss_wrapper tar unzip findutils" && \
+    dnf install -y dnf-plugins-core && \
+    dnf copr enable -y @dotnet-sig/dotnet-preview && \
     yum install -y --setopt=tsflags=nodocs $INSTALL_PKGS && \
     rpm -V $INSTALL_PKGS && \
     yum clean all -y && \
